--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -7,6 +7,12 @@
     <title>University Project</title>
     <link rel="stylesheet" type="text/css" href="../../../ui.css" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
@@ -17,14 +23,13 @@
             src="../../assets/images/garota.svg"
             alt="garota mexendo no computador"
           />
-          <h2>Olá! Seja Bem vindo!</h2>
-          <h3>
+          <h2 class="main-title">Olá! Seja <strong>Bem vindo!</strong></h2>
+          <h3 class="content-text">
             Lorem Ipsum is simply dummy text of the<br />
             and typesetting industry. Lorem <br />
             has been the industry's standard <br />
             dummy text ever since the 1500s,
           </h3>
-          
         </div>
         <!-- <div class="separator" /> -->
         <div class="content-right">
@@ -34,7 +39,9 @@
             alt="logoprojecao"
           />
           <div class="login">
-            <p class="title-login">Insira seus dados para <strong>continuar!</strong></p>
+            <p class="title-login">
+              Insira seus dados para <strong>continuar!</strong>
+            </p>
 
             <form method="post">
               <input
